# htmlclasses

./: .gitignore  README.md  bandit.sh  build.py  build_readme.py  check_all.sh  flake8.sh  mypy.sh  pyproject.toml  readme_template.txt  readme_template.txt.bak  run_tests.sh  spelling.sh  test.txt
htmlclasses/: __init__.py  htmlclasses.py  serialize.py
htmlclasses/lib/: svg.py
tests/: test_htmlclasses.py  test_lib.py
tests/readme_examples/: checksums.txt  example_10_repeated_elements.py  example_1_hello_world.py  example_hello_world.py  generate_checksums.py  test_checksums.py  test_examples.py
