[tool.poetry]
name = "htmlclasses"
version = "0.1.0"
description = ""
authors = ["uigctaw <uigctaw@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
bandit = "^1.6.2"
flake8 = "^3.8.4"
mypy = "^0.790"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
