[tool.poetry]
name = "htmlclasses"
version = "0.3.1"
description = "Python in, HTML out."
authors = ["uigctaw <uigctaw@protonmail.com>"]
readme="README.md"
homepage="https://github.com/uigctaw/htmlclasses"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
bandit = "^1.6.2"
flake8 = "^3.8.4"
numpy = "^1.21.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
